16a. Adding static files - base.html

--- a/notes/templates/notes/notes_list.html
+++ b/notes/templates/notes/notes_list.html
@@ -1,13 +1,12 @@
-{% load static %}
+{% extends "base.html" %}
 
-<html>
-    <head>
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    </head>
-    <h1>These are the notes:</h1>
-    <ul>
-        {% for note in notes %}
-        <li class="note-li">{{note.title}}</li>
-        {% endfor %}
-    </ul>
-</html>
+{% block content %}
+
+<h1>These are the notes:</h1>
+<ul>
+    {% for note in notes %}
+    <li class="note-li">{{note.title}}</li>
+    {% endfor %}
+</ul>
+
+{% endblock %}
