17. adding bootstrap styles

--- a/home/templates/home/authorized.html
+++ b/home/templates/home/authorized.html
@@ -1,5 +1,7 @@
-<html>
+{% extends "base.html" %}
+{% block content %}
     <h1>
         You're in a restricted area.
     </h1>
-</html>
+
+{% endblock %}
