--- a/home/templates/home/welcome.html
+++ b/home/templates/home/welcome.html
@@ -1,9 +1,6 @@
-<html>
-    <header>
-        <title>Smart Notes</title>
-    </header>
-    <body>
-        <h1>Welcome to Smart Notes!</h1>
-        <p>Today is {{today}}</p>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <h1>Welcome to Smart Notes!</h1>
+    <p>Today is {{today}}</p>
+    <a href="{% url 'notes.list' %}" class="btn btn-primary">Check out these smart notes!</a>
+{% endblock %}
