--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -2,10 +2,21 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
         <title>Smart Notes</title>
     </head>
+
     <body>
-        {% block content %}
-        {% endblock %}
+        <div class="container-fluid my-5 text-center">
+            {% block content %}
+            {% endblock %}
+        </div>
     </body>
 </html>
