--- a/notes/templates/notes/notes_form.html
+++ b/notes/templates/notes/notes_form.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 <form action="{% url 'notes.new' %}" method="POST">{% csrf_token %}
-{{form}}
+{{form.as_p}}
 <button class="btn btn-success my-5" type="submit">Submit</button>
 </form>
+
+{% if form.errors %}
+<div class="alert alert-danger my-5">
+    {{form.errors.title.as_text}}
+</div>
+{% endif %}
+
 {% endblock %}
