--- a/notes/templates/notes/notes_form.html
+++ b/notes/templates/notes/notes_form.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<form action="{% url 'notes.new' %}" method="POST">{% csrf_token %}
+<form method="POST">{% csrf_token %}
 {{form.as_p}}
 <button class="btn btn-success my-5" type="submit">Submit</button>
+<a href="{% url 'notes.list' %}" class="btn btn-secondary" >Cancel</a>
 </form>
 
 {% if form.errors %}
