--- a/notes/templates/notes/notes_detail.html
+++ b/notes/templates/notes/notes_detail.html
@@ -5,6 +5,7 @@
     <p>{{note.text}}</p>
 </div>
 
-<a href="{% url 'notes.list' %}}" class="btn btn-secondary my-5" >Back</a>
+<a href="{% url 'notes.list' %}" class="btn btn-secondary my-5" >Back</a>
 <a href="{% url 'notes.update' pk=note.id %}" class="btn btn-info" >Edit</a>
+<a href="{% url 'notes.delete' pk=note.id %}" class="btn btn-warning" >Delete</a>
 {% endblock %}
